fix: add style for search component(visibility)

--- a/src/components/search-item-list/search-item-list.scss
+++ b/src/components/search-item-list/search-item-list.scss
@@ -19,3 +19,9 @@
   margin: 0px 200px;
   background-color: rgb(10, 10, 10);
 }
+
+.no-result {
+  display: flex;
+  justify-content: center;
+  color: rgba(241, 233, 233, 0.459);
+}
